# pomodzi

./: .gitignore  DEPLOY.md  README.md  render.yaml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_security_and_stellar.sql  0003_international.sql
backend/scripts/: seed_platform_admin.sql
backend/src/: config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  security.rs  state.rs  test_support.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/handlers/: admin.rs  auth.rs  contributions.rs  groups.rs  mod.rs  notifications.rs  payouts.rs  transactions.rs  users.rs
backend/src/international/: currencies.rs  mod.rs
backend/src/middleware/: rate_limit.rs
backend/src/stellar/: mod.rs  payments.rs
backend/tests/: security_tests.rs  stellar_signing_test.rs
database/: schema.sql
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/admin/: page.tsx
frontend/src/app/dashboard/groups/: page.tsx
frontend/src/app/dashboard/groups/[id]/: page.tsx
frontend/src/app/dashboard/groups/new/: page.tsx
frontend/src/app/dashboard/notifications/: page.tsx
frontend/src/app/dashboard/transactions/: page.tsx
frontend/src/app/dashboard/wallet/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/auth/: auth-shell.tsx
frontend/src/components/groups/: contribution-panel.tsx  group-card.tsx  member-list.tsx
frontend/src/components/landing/: animated-counter.tsx  feature-card.tsx  floating-dashboard-preview.tsx  global-network.tsx  glow-background.tsx  index.ts  money-flow-animation.tsx  premium-button.tsx  trust-badge.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/shared/: blockchain-activity.tsx  empty-state.tsx  logo.tsx  progress-ring.tsx  reveal.tsx  stat-card.tsx
frontend/src/components/theme/: theme-toggle.tsx
frontend/src/components/ui/: animated-number.tsx  badge.tsx  button.tsx  card.tsx  charts.tsx  input.tsx  label.tsx  skeleton.tsx
frontend/src/context/: auth-context.tsx
frontend/src/lib/: api.ts  motion.ts  types.ts  utils.ts  validation.ts
frontend/src/lib/config/: countries.ts  currencies.ts  payment-providers.ts  transaction-labels.ts
scripts/: e2e-stellar-verify.ps1
