[package]
name = "pamodzi-backend"
version = "0.1.0"
edition = "2021"
description = "Pamodzi Finance — Stellar-powered community savings & village banking API"

[lib]
name = "pamodzi_backend"
path = "src/lib.rs"

[[bin]]
name = "pamodzi-backend"
path = "src/main.rs"

[[bin]]
name = "provision-admin"
path = "src/bin/provision-admin.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "set-header"] }
governor = "0.6"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "macros",
    "migrate",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
bcrypt = "0.15"

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
stellar-xdr = { version = "22.1.0", features = ["curr", "std"] }
stellar-strkey = "0.0.9"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 2
